# python-oop-project-101

./: .gitignore  README.md  pyproject.toml  setup.cfg
hexlet-code/: pyproject.toml
hexlet-code/tests/: DictValidator_test.py  ListValidator_test.py  NumberValidator_test.py  StringValidator_test.py  ValidatorString_test.py  __init__.py  add_validator_test.py
hexlet-code/validator/: Validator.py  __init__.py
tests/: DictValidator_test.py  ListValidator_test.py  NumberValidator_test.py  StringValidator_test.py  add_validator_test.py  test_DictValidator.py  test_ListValidator.py  test_NumberValidator.py  test_StringValidator.py  test_add_validator.py
validator/: Validator.py  __init__.py
