[tool.poetry]
name = "hexlet-code"
packages = [{include = "validator"}]
version = "0.1.0"
description = ""
authors = ["BananfonBan <bananfonban@yandex.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
